@@ -1933,4 +1933,5 @@ GLIBC_2.33 mknodat F
 GLIBC_2.33 stat F
 GLIBC_2.33 stat64 F
 GLIBC_2.34 __libc_start_main F
+GLIBC_2.34 execveat F
 GLIBC_2.34 pthread_kill F
