@@ -1935,4 +1935,5 @@ GLIBC_2.33 write F
 GLIBC_2.33 writev F
 GLIBC_2.33 wscanf F
 GLIBC_2.34 __libc_start_main F
+GLIBC_2.34 execveat F
 GLIBC_2.34 pthread_kill F
