@@ -2189,4 +2189,5 @@ GLIBC_2.33 stat F
 GLIBC_2.33 stat64 F
 GLIBC_2.34 __isnanf128 F
 GLIBC_2.34 __libc_start_main F
+GLIBC_2.34 execveat F
 GLIBC_2.34 pthread_kill F
